--- a/index.html
+++ b/index.html
@@ -60,6 +60,21 @@
           </ul>
         </nav>
       </header>
+
+      <div class="search-results"></div>
+
+      <div class="recipe">
+        <div class="message">
+          <div>
+            <svg>
+              <use href="src/img/icons.svg#icon-smile"></use>
+            </svg>
+          </div>
+          <p>Start by searching for a recipe or an ingredient. Have fun!</p>
+        </div>
+
+        <!-- Recipe info here -->
+      </div>
     </div>
   </body>
 </html>
