chore(html): update .search-results markup

--- a/index.html
+++ b/index.html
@@ -63,9 +63,14 @@
 
       <div class="search-results">
         <div class="results">
-          <a href="#5ed6604591c37cdc054bcc40">RECIPE 1</a>
-          <a href="#5ed6604591c37cdc054bcd09">RECIPE 2</a>
+          <!-- Search results here -->
         </div>
+
+        <div class="pagination"></div>
+
+        <p class="copyright">
+          &copy; Copyright 2024 - Recipedia | Inspired by Jonas Schmedtmann
+        </p>
       </div>
 
       <div class="recipe">
