chore(html): add footer image for copyright

--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
         <div class="pagination"></div>
 
         <p class="copyright">
+          <img
+            src="src/img/recipedia-logo.png"
+            alt="recipedia logo"
+            class="footer__logo"
+          />
+          <br />
           &copy; Copyright 2024 - Recipedia | Inspired by Jonas Schmedtmann
         </p>
       </div>
