--- a/index.html
+++ b/index.html
@@ -55,7 +55,24 @@
                 </svg>
                 <span>Bookmarks</span>
               </button>
-              <div class="bookmarks"></div>
+
+              <div class="bookmarks">
+                <ul class="bookmarks__list">
+                  <div class="message">
+                    <div>
+                      <svg>
+                        <use href="src/img/icons.svg#icon-alert-triangle"></use>
+                      </svg>
+                    </div>
+                    <p>
+                      No bookmarks yet. Find a nice recipe and bookmark it 🙂
+                    </p>
+                  </div>
+                  <!-- Bookmark here -->
+                  <!-- Bookmark here -->
+                  <!-- Bookmark here -->
+                </ul>
+              </div>
             </li>
           </ul>
         </nav>
