feat(sidebar): implement mobile sidebar functionality

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
+              <button class="nav__btn nav__btn--show-sidebar">
+                <svg class="nav__icon">
+                  <use href="src/img/icons.svg#icon-search"></use>
+                </svg>
+                <span>Search</span>
+              </button>
+            </li>
+            <li class="nav__item">
               <button class="nav__btn nav__btn--add-recipe">
                 <svg class="nav__icon">
                   <use href="src/img/icons.svg#icon-edit"></use>
@@ -79,6 +87,7 @@
       </header>
 
       <div class="search-results">
+        <button class="btn--close-sidebar">X</button>
         <div class="results">
           <!-- Search results here -->
         </div>
